--- a/build.gradle
+++ b/build.gradle
@@ -29,5 +29,7 @@ repositories { //라이브러리를 다운받을 원격저장소 선택 - mavenC
 dependencies { //프로젝트에 필요한 의존성 선언(버전 명시하지 않아야 위의 전역변수 사용)
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.projectlombok:lombok')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('com.h2database:h2')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
